[project]
name = "mcp-server"
version = "0.1.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "graphiti-core>=0.8.2",
    "azure-core>=1.29.0",
    "azure-identity>=1.21.0",
    "azure-common>=1.1.28",     # ✅ fixes ModuleNotFoundError for `azure`
    "fastapi",
    "uvicorn[standard]"
]


